--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   <section id="spiders">
   </section>
 </main>
+
+<footer>
+<a href=http://github.com/amundo/spidersunlimited>http://github.com/amundo/spidersunlimited</a>
+<br>Images from Wikipedia.
+<br>These spiders are not really for sale.
+</footer>
+
 <script>
 let renderSpider = spider => `
   <article class=spider>
